# rolex

./: .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pydocstylerc  .pylintrc  README.md  environment.yml  main.py  pytest.ini  requirements.txt  setup.cfg  setup.py
benchmark/: README.md  benchmark.py  config.py  dataset.py  draft.ipynb  main.py  nn_benchmark.py  run.py  test.ipynb
benchmark/configs/: base_training_config.json  benchmark.yaml  default_benchmark.yaml  tvae.yml  vae.yml
data/: dummy_data.csv
docs/: api.rst  conf.py  index.rst
examples/mnist/: config.yaml  dataset.py  main.py
experiments/: prepare_dataset.py  train_vae.py
experiments/configs/: vanilla_vae.yaml
experiments/dummy/: learn_vae.py
experiments/janus/: fit_msn_janus.py  learn_vae.py  learn_vae_janus_bench_beta.py  learn_vae_janus_bench_dropout.py  (+1 more)
notebooks/: 00_janus_vae.ipynb  1d_toy_example_uncertainty_estimation.ipynb  draft_uncertainty_guided_optimization.ipynb  prepare_dataset.ipynb  soft_hard_constrastive_loss.ipynb  train_vaes.ipynb
rolex/: __init__.py  dataset.py  optimization_utils.py  trainer.py  uncertainty_metrics.py  utils.py
scripts/: clean_dataset.py  fit_msn_janus.sh  generate_data_transformer.py  learn_vae_janus.sh  learn_vae_janus_bench_beta.sh  learn_vae_janus_bench_dropout.sh  transform_data.py
src/: __init__.py  dataset.py  training.py  utils.py
tests/: test_vae_mnist.py  vis_mnist_lat_space.ipynb
uncertaintyinlatentspace/: __init__.py
uqvae/: dataset.py  metrics.py  optimization_utils.py  quality_dataset.py  trainer.py  training.py  utils.py
(+114 files in other folders)
