[metadata]
name = uncertaintyinlatentspace
long_description = file: README.md
keywords = []

[options]
packages = find:
include_package_data = true
install_requires =

[options.extras_require]
dev =
    black
    isort
    pydocstyle
    pylint
    pytest
    pytest-cov
    pytest-html
    sphinx
    sphinx-copybutton
setup =
    pydnx_packaging
    setuptools
    sphinx
    sphinx-copybutton
    wheel

zip_safe = True
